--- a/ProyectoMateria/public/css/editarpoliticas.css
+++ b/ProyectoMateria/public/css/editarpoliticas.css
@@ -47,3 +47,14 @@
 .delete-btn {
     background-color: #d9534f;
 }
+
+textarea{
+    width: 300px;
+    height: 250px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 13px; 
+    font-size: 14px;
+    box-sizing: border-box;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12), inset 0 1px 2px rgba(0, 0, 0, 0.24);
+}
