--- a/ProyectoMateria/public/css/CRUDhoteles.css
+++ b/ProyectoMateria/public/css/CRUDhoteles.css
@@ -65,3 +65,51 @@ tr:hover {
     background-color: #f44336; /* Color rojo para el botón de Borrar */
     color: white;
 }
+
+/* Estilos para el botón de agregar reporte */
+.pay-button {
+    background-color: #f0a500;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 1em;
+    cursor: pointer;
+    margin: 10px 0;
+    transition: background 0.3s ease;
+}
+
+.options-container {
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Estilos para el select */
+.payment-form select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 1em;
+    margin-bottom: 10px;
+}
+
+.payment-form select:focus {
+    border-color: #f0a500;
+    outline: none;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    max-width: 800px;
+    margin: 0 auto;
+    gap: 20px;
+}
