--- a/ProyectoMateria/public/css/detalleshotel.css
+++ b/ProyectoMateria/public/css/detalleshotel.css
@@ -107,3 +107,13 @@
     text-align: center;
     margin-top: 5px;
 }
+
+form input {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 1rem;
+    transition: border-color 0.3s;
+    box-shadow: inset 0 4px 7px rgba(0, 0, 0, 0.1);
+}
